
        * AnyId: added migrate_keys_from to migrate list or hash content 
          during updgrades.
        * ObjTreeScanner: Added node_dispatch_cb parameter to setup callback
          dedicated to specific configuration classes.
        * Debian::Dependency: don't check debhelper
        * Will fix debian bug #609889
        
2011-01-10 Dominique Dumont  <domi.dumont@free.fr> 1.229

        * config-edit: added -apply-fixes option
        * Value: can specify wider replace instruction by using regexp as
          key of the 'replace' parameter
        * Debian::Dpkg::Copyright: updtead to new CANDIDATE DEP-5
          specification. Copyright files written for older
          specifications are migrated to the new specification. This
          should save a lot of typing from my fellow Debian packagers.
          Feedbacks are welcome.


2011-01-09 Dominique Dumont  <domi.dumont@free.fr> 1.228

        * Specifically require DB_File as this module is not available by default on Ubuntu
        * Skip Debian dependency tests when AptPkg::Config is not available (non Debian systems)

2011-01-07 Dominique Dumont  <domi.dumont@free.fr> 1.227

        * Model.pm: deprecated name_match parameter in accept
          specification. The regexp should now be specified as a
          key of a hash. 
        * Value.pm: warn_if_match and warn_unless_match can speficy instructions to "fix"
          the value.
        * WizardHelper: can be set to stop on items with warnings. Added bail_out method to bail
          out cleanly from wizard helper.
        * model Debian::Dpkg::Control::Binary: Depends element specifies 
          Perl cargo class Config::Model::Debian::Dependency (see below)
        * Likewise for Debian::Dpkg::Control::Source Build-Depends*
        * Debian::Dependency: new class derived from Value to provide checks specific
          to Debian dependencies (syntax, whether a "(>= vers)" is necessary or not, ... )
        * New dependency: LWP::Simple

