@@ -3,7 +3,10 @@
           during updgrades.
         * ObjTreeScanner: Added node_dispatch_cb parameter to setup callback
           dedicated to specific configuration classes.
+        * ValueComputer: added 'undef_is' to allow undef value in formulas. Useful for
+          complex migration scenario where migration can come from several alternative parmeters.
         * Debian::Dependency: don't check debhelper
+        * Debian::Copyright: removed license keyword warnings.
         * Will fix debian bug #609889
         
 2011-01-10 Dominique Dumont  <domi.dumont@free.fr> 1.229
